Fixed icon alignment in quicklaunchers

--- a/ui/apps/themes/components/launcher.less
+++ b/ui/apps/themes/components/launcher.less
@@ -125,10 +125,10 @@
             // svg styles
             //padding: 24px 16px;
             //width: @appcontrol-height - 16;
-            margin-top: -1px;
+            margin-top: -2px;
             position: relative;
             z-index: 2;
-            height: @appcontrol-height;
+            height: @appcontrol-height - 1;
             display: inline-block;
             border: 0;
             svg .fill-c1 { fill: #fff; }
